# vscode-config

./: README.md
vscode-c++-project/: CMakeLists.txt  README.md
vscode-c++-project/src/: main.cpp
vscode-c++-single/: CMakeLists.txt  README.md
